# dont-commit-me

./: .gitignore  .pre-commit-hooks.yaml  README.md  flat-push.sh  pyproject.toml
dont_commit_me/: config.py  hook.py  wizard.py
